compiler/weave_syntax/tests/data/Tokens.error
error: Unexpected tokens
        --> <source>:50:1
         |
      50 | abstract
         | ^^^^^^^^
      51 | add
         | ^^^
      52 | addressof
         | ^^^^^^^^^
     ... |
     318 | r"raw string \t"
         | ^^^^^^^^^^^^^^^^
     319 | r#"raw string \n"#
         | ^^^^^^^^^^^^^^^^^^
     320 | r##" r#"inner\nraw\nstring"# "##
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
